test/Fail/Issue249.err
Issue249.agda:13.1-15.47: error: [DuplicateImports]
Ambiguous imports from module A for identifiers: module ,; C; D
when scope checking the declaration
  open A renaming (X to C; Y to C; X' to D; Y' to D; module M to ,;
                   module N to ,)
